Use appsettings for configuration and refactor exceptio handling

--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "CosmosOptions": {
+    "AccountOptions": {
+      "AccountEndpoint": "",
+      "AccountKey": ""
+    },
+    "ContainerOptions": {
+      "DatabaseId": "carsapp",
+      "ContainerId": "car"
+    }
+  }
 }
