Fix model serialization issue

--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -14,7 +14,7 @@
     },
     "ContainerOptions": {
       "DatabaseId": "carsapp",
-      "ContainerId": "car"
+      "ContainerId": "cars"
     }
   }
 }
