Add option to use MSI for auth

--- a/Cars/appsettings.Development.json
+++ b/Cars/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+
+  "CosmosOptions": {
+    "AccountOptions": {
+      "UseMSICredentials": false,
+      "AccountEndpoint": "",
+      "AccountKey": ""
     }
   }
 }
