--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -9,8 +9,7 @@
 
   "CosmosOptions": {
     "AccountOptions": {
-      "AccountEndpoint": "",
-      "AccountKey": ""
+      "UseMSICredentials": true
     },
     "ContainerOptions": {
       "DatabaseId": "carsapp",
