Use DefaultAzureCredentials and refactor cosmos client initialization

--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -7,11 +7,12 @@
   },
   "AllowedHosts": "*",
 
-  "CosmosOptions": {
-    "AccountOptions": {
-      "UseMSICredentials": true
+  "CosmosDB": {
+    "CosmosAccountOptions": {
+      "UseMSICredentials": true,
+      "AccountEndpoint": "https://cars-cosmos.documents.azure.com:443"
     },
-    "ContainerOptions": {
+    "CosmosContainerOptions": {
       "DatabaseId": "carsapp",
       "ContainerId": "cars"
     }
