Add managed identity optional

--- a/Cars/appsettings.Development.json
+++ b/Cars/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CosmosDB": {
+    "CosmosAccountOptions": {
+      "UseManagedIdentity": false
+    }
   }
 }
