--- a/Cars/appsettings.json
+++ b/Cars/appsettings.json
@@ -9,7 +9,7 @@
 
   "CosmosDB": {
     "CosmosAccountOptions": {
-      "UseMSICredentials": true,
+      "UseManagedIdentity": true,
       "AccountEndpoint": "https://cars-cosmos.documents.azure.com:443"
     },
     "CosmosContainerOptions": {
